Nolana hotfix-1 folio-test

--- a/tenant-assets/MainNav.css
+++ b/tenant-assets/MainNav.css
@@ -4,8 +4,8 @@
   --main-nav-min-height-desktop: 56px;
   --main-nav-min-height-mobile: 48px;
   --main-nav-border-bottom-color: rgba(0, 0, 0, 0.9);
-  --main-nav-background-color: rgb(255, 196, 0);
-  --main-nav-text-color: #fff;
+  --main-nav-background-color: rgb(0, 247, 255);
+  --main-nav-text-color: #000000;
 }
 
 .navRoot {
