Changes background-color for folio-stage.

--- a/tenant-assets/MainNav.css
+++ b/tenant-assets/MainNav.css
@@ -4,8 +4,8 @@
   --main-nav-min-height-desktop: 56px;
   --main-nav-min-height-mobile: 48px;
   --main-nav-border-bottom-color: rgba(0, 0, 0, 0.9);
-  --main-nav-background-color: rgb(111, 143, 175);
-  --main-nav-text-color: #ffffff;
+  --main-nav-background-color: rgb(233, 116, 81);
+  --main-nav-text-color: #fff;
 }
 
 .navRoot {
